# AndroidLogcatStdouts_old

./: .gitignore  README.md  build.gradle  proguard-rules.pro
src/androidTest/java/ru/nfeotools/alogstd/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: AndroidLogcatStdouts.cpp  AndroidLogcatStdouts.h  AndroidLogcatStdoutsJni.cpp
src/main/java/ru/nfeotools/alogstd/: AndroidLogcatStdoutsJni.java
src/main/res/values/: strings.xml
src/test/java/ru/nfeotools/alogstd/: ExampleUnitTest.java
